force-app/main/default/objects/sfmc_subscriber_534007695__dll/fields/AffiliatedTo__c.field-meta.xml
<CustomField>
    <fullName>AffiliatedTo__c</fullName>
    <label>Affiliated To</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>AffiliatedTo</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>