force-app/main/default/objects/sfmc_subscriber_534007695__dll/fields/KQ_PartyIdentificationID__c.field-meta.xml
<CustomField>
    <fullName>KQ_PartyIdentificationID__c</fullName>
    <label>KQ_PartyIdentificationID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>KQ_PartyIdentificationID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>KEY_QUALIFIER</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>